--- a/build.gradle
+++ b/build.gradle
@@ -5,3 +5,18 @@
 
 apply plugin: 'idea'
 apply plugin: 'java'
+
+repositories {
+  maven { url 'https://plugins.gradle.org/m2/' }
+//  maven { url 'https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api' }
+  mavenCentral()
+  jcenter()
+}
+
+
+dependencies {
+  compile  "commons-cli:commons-cli:1.4"
+  testCompile  "org.junit.jupiter:junit-jupiter-api:5.5.2"
+
+}
+
